<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#000000">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/scan_matrix"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        android:alpha="0.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="HardcodedText,Autofill,ContentDescription,TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/layoutChat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewStatusChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/imageViewCentrifuga"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:src="@drawable/logo222"
                    android:contentDescription="@string/desc_centrifuga"
                    android:scaleType="centerInside" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="#2C3E50"
                android:gravity="center"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RPM"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textViewRPM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#00FF00"
                    android:textSize="80sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/btnHabilitarMotor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_enable_motor"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#00FF00"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="5dp"
                android:textColor="#2C3E50"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnMotorAntiHorario"
                    android:layout_width="5dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/btn_left"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="#1E40AF"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnMotorAgit"
                    android:layout_width="5dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="AGITAR"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="#3498db"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnMotorHorario"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/btn_right"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginStart="4dp"
                    android:backgroundTint="#1E40AF"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <Button
                    android:id="@+id/btnPararMotor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/btn_stop_motor"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#FF0000"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/btn400RPM"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/btn_slow"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="#7C3AED"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn1000RPM"
                    android:layout_width="5dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/btn_fast"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="#7C3AED"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="3dp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>